objects/ASI_MFM_Plan_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_TH_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBKK</fullName>
                </value>
                <value>
                    <fullName>UPC</fullName>
                </value>
                <value>
                    <fullName>STH</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>SD TT Off</fullName>
                </value>
                <value>
                    <fullName>SD TT On</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>7-Eleven</fullName>
                </value>
                <value>
                    <fullName>Family Mart</fullName>
                </value>
                <value>
                    <fullName>108 Shop</fullName>
                </value>
                <value>
                    <fullName>SD MT</fullName>
                </value>
                <value>
                    <fullName>Lotus</fullName>
                </value>
                <value>
                    <fullName>Big C</fullName>
                </value>
                <value>
                    <fullName>Carrefour</fullName>
                </value>
                <value>
                    <fullName>Makro</fullName>
                </value>
                <value>
                    <fullName>TOPS</fullName>
                </value>
                <value>
                    <fullName>The Mall</fullName>
                </value>
                <value>
                    <fullName>Foodland</fullName>
                </value>
                <value>
                    <fullName>Villa</fullName>
                </value>
                <value>
                    <fullName>Max Valu</fullName>
                </value>
                <value>
                    <fullName>M&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_TR_Rec_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TR Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Record_Type__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_TR_Rec_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TR Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TW_Related_PAF_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related PAF Item</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form_Item__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_T_E__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Cost__c</fullName>
        <label>Plan Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_UOM__c</fullName>
        <label>UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_VenueWhere_Formula__c</fullName>
        <formula>ASI_MFM_Venue_Where__r.ASI_CRM_MY_CustomerCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue(Where)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Venue_Where__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Venue(Where)</description>
        <label>Venue(Where)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.(Inactive Flag should be false)</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Plan Line Items (Venue(Where))</relationshipLabel>
        <relationshipName>Plan_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Web_Service_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Service Failed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_is_First_Item_sys__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_First_Item_sys__c =  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASI_MFM_is_First_Item_sys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>asi_MFM_PR_Company__c</fullName>
        <label>PR Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD China Ltd - HQ/SSC</fullName>
                </value>
                <value>
                    <fullName>AD China Ltd - Suntory Allied</fullName>
                </value>
                <value>
                    <fullName>Martell F.E. Trading (Home)</fullName>
                </value>
                <value>
                    <fullName>PR Asia DF - Hong Kong</fullName>
                </value>
                <value>
                    <fullName>PR Asia DF - HQ / SSC</fullName>
                </value>
                <value>
                    <fullName>PR Asia DF -Japan Kirin</fullName>
                </value>
                <value>
                    <fullName>PR Asia DF - Macau</fullName>
                </value>
                <value>
                    <fullName>PR Asia DF - Service Hub</fullName>
                </value>
                <value>
                    <fullName>PR HK - ADF</fullName>
                </value>
                <value>
                    <fullName>PR HK - China Duty Free</fullName>
                </value>
                <value>
                    <fullName>PR HK - Gulf DM</fullName>
                </value>
                <value>
                    <fullName>PR HK - HQ / SSC</fullName>
                </value>
                <value>
                    <fullName>PR HK - India DF</fullName>
                </value>
                <value>
                    <fullName>PR HK - PRC</fullName>
                </value>
                <value>
                    <fullName>PR HK - Service Hub</fullName>
                </value>
                <value>
                    <fullName>PR HK - Sri Lanka DF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_Customer_Name__c</columns>
        <columns>ASI_MFM_List_Item_Description__c</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <columns>ASI_MFM_Total_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLI{000000}</displayFormat>
        <label>Plan Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_Plan_Line_Item</fullName>
        <active>true</active>
        <label>CAP Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TW_Plan_Line_Item</fullName>
        <active>true</active>
        <label>CAP TW Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Plan_Line_Item</fullName>
        <active>true</active>
        <label>CN Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_Plan_Line_Item</fullName>
        <active>true</active>
        <label>GF Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_HK_Plan_Line_Item</fullName>
        <active>true</active>
        <label>HK Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_Plan_Line_Item</fullName>
        <active>true</active>
        <label>JP Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Plan_Line_Item</fullName>
        <active>true</active>
        <label>KR Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MY_Plan_Line_Item</fullName>
        <active>true</active>
        <label>MY Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_Plan_Line_Item</fullName>
        <active>true</active>
        <label>PH Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_RM_Plan_Line_Item</fullName>
        <active>true</active>
        <label>RM Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SC_Plan_Line_Item</fullName>
        <active>true</active>
        <label>SC Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SG_Plan_Line_Item</fullName>
        <active>true</active>
        <label>SG Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TH_Plan_Line_Item</fullName>
        <active>true</active>
        <label>TH Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TR_Plan_Line_Item</fullName>
        <active>true</active>
        <label>TR Plan Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_Plan_Line_Item</fullName>
        <active>true</active>
        <label>TW Plan Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_AC_Mandatory_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;ASI_MFM_TW_Plan_Line_Item&apos;) &amp;&amp; ISBLANK( ASI_MFM_A_C_Code__c )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_A_C_Code__c</errorDisplayField>
        <errorMessage>A/C Code is Mandatory for selection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_AP_AC_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>!ISBLANK(ASI_MFM_A_C_Code__c) &amp;&amp; (!ISBLANK( ASI_MFM_AP_Code__c ) &amp;&amp; ASI_MFM_A_C_Code__c &lt;&gt;  ASI_MFM_AP_Code__r.ASI_MFM_A_C_Code__c )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_A_C_Code__c</errorDisplayField>
        <errorMessage>The A/C Code is NOT the A/C Code of AP Code selected. Please correct</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Check_CAPEX_OPEX_Type</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_CAP&apos;)&amp;&amp;
((ISPICKVAL(ASI_MFM_Plan__r.ASI_MFM_Plan_Type__c, &apos;CAPEX&apos;)&amp;&amp;  ASI_MFM_BU_Code__r.ASI_MFM_OPEX__c = TRUE ) || (ISPICKVAL(ASI_MFM_Plan__r.ASI_MFM_Plan_Type__c, &apos;OPEX&apos;)&amp;&amp; ASI_MFM_BU_Code__r.ASI_MFM_OPEX__c = FALSE ))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_BU_Code__c</errorDisplayField>
        <errorMessage>For CAPEX plan, please select a CAPEX BU Code. For OPEX plan, please select an OPEX BU Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Future_Available_Date</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_CAP&apos;) &amp;&amp; ISPICKVAL( ASI_MFM_Quotation__c , &apos;N&apos;) &amp;&amp;
ASI_MFM_Quotation_Available_Date__c  &lt;=  TODAY() &amp;&amp;  (ISCHANGED(ASI_MFM_Quotation_Available_Date__c) ||  ISNEW() )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Quotation_Available_Date__c</errorDisplayField>
        <errorMessage>Quotation Available Date must be later than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Quotation_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_CAP&apos;)  &amp;&amp;  ISPICKVAL( ASI_MFM_Quotation__c, &apos;N&apos;) &amp;&amp; !ASI_MFM_T_E__c &amp;&amp; ISBLANK( ASI_MFM_Quotation_Available_Date__c)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Quotation_Available_Date__c</errorDisplayField>
        <errorMessage>You must specify the Quotation Available Date for records which Quotation select ’N‘.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Quotation_Reason_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_CAP&apos;) &amp;&amp;  ISPICKVAL( ASI_MFM_Quotation__c, &apos;N&apos;) &amp;&amp; !ASI_MFM_T_E__c  &amp;&amp; ISBLANK(  ASI_MFM_Justification__c)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Justification__c</errorDisplayField>
        <errorMessage>You must specify the reason in Justification field for records which Quotation select ’N‘.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_GF_PLI_SubBrand_Mandatory</fullName>
        <active>true</active>
        <description>Validation to check either Sub-brand or Sub-brand Allocation has to be selected</description>
        <errorConditionFormula>AND
(
 CONTAINS(RecordType.DeveloperName, &quot;ASI_MFM_GF&quot;),
OR
(
  ISBLANK(ASI_MFM_Sub_brand_Code__c )&amp;&amp; ISBLANK( ASI_MFM_Sub_brand_Allocation_Type__c ),
  NOT(ISBLANK(ASI_MFM_Sub_brand_Code__c ))&amp;&amp; NOT(ISBLANK( ASI_MFM_Sub_brand_Allocation_Type__c))
)
)</errorConditionFormula>
        <errorMessage>Please select Sub-brand or Sub-brand Allocation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_HK_PlanLineCustomerBUValidation</fullName>
        <active>true</active>
        <description>Ensure correct customer (HK or Macau) is selected</description>
        <errorConditionFormula>AND (  
 CONTAINS(RecordType.DeveloperName, &quot;ASI_MFM_HK&quot;),
  TEXT(ASI_MFM_Customer_Name__r.ASI_HK_CRM_Location__c) !=  ASI_MFM_Plan__r.ASI_MFM_Prefix__r.ASI_MFM_Default_BU__r.ASI_MFM_BU_Code__c 
)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Customer_Name__c</errorDisplayField>
        <errorMessage>Please select Customer of the correct location (Hong Kong/Macau)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Lock_HK_PLI</fullName>
        <active>true</active>
        <errorConditionFormula>(ASI_MFM_Plan__r.RecordType.DeveloperName = &apos;ASI_MFM_HK_Plan_Read_Only&apos;) &amp;&amp; !CONTAINS($Profile.Name, &apos;System Administrator&apos;) &amp;&amp; (ASI_MFM_Sys_Sync_Time_Milli__c  = PRIORVALUE(ASI_MFM_Sys_Sync_Time_Milli__c))</errorConditionFormula>
        <errorMessage>You can NOT modify the Plan Line under a Final or Complete Plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Lock_TW_PLI</fullName>
        <active>false</active>
        <errorConditionFormula>(ASI_MFM_Plan__r.RecordType.DeveloperName = &apos;ASI_MFM_TW_Plan_Read_Only&apos;) &amp;&amp; !CONTAINS($Profile.Name, &apos;ASI_MFM_TW Power&apos;) &amp;&amp; (ASI_MFM_Sys_Sync_Time_Milli__c = PRIORVALUE(ASI_MFM_Sys_Sync_Time_Milli__c))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_A_C_Code__c</errorDisplayField>
        <errorMessage>You can NOT modify the Plan Line under a Final or Complete Plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_SKU_SubBrand_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ASI_MFM_Sub_brand_Code__c) &amp;&amp; (!ISBLANK( ASI_MFM_SKU_Code__c ) &amp;&amp; ASI_MFM_Sub_brand_Code__c  &lt;&gt;  ASI_MFM_SKU_Code__r.ASI_MFM_Sub_brand__c )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Sub_brand_Code__c</errorDisplayField>
        <errorMessage>The Sub-brand Code is NOT the Sub-brand of SKU selected. Please correct</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_TotalAmount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(
	!ISBLANK(ASI_MFM_Month_1_Cost__c)  || 
	!ISBLANK(ASI_MFM_Month_2_Cost__c) || 
	!ISBLANK(ASI_MFM_Month_3_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_4_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_5_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_6_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_7_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_8_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_9_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_10_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_11_Cost__c)|| 
	!ISBLANK(ASI_MFM_Month_12_Cost__c)
) 
&amp;&amp;  
( 
	ASI_MFM_Total_Cost__c  &lt;&gt;  
		IF( ISBLANK(ASI_MFM_Month_1_Cost__c) ,0, ASI_MFM_Month_1_Cost__c)  + 
		IF( ISBLANK(ASI_MFM_Month_2_Cost__c) ,0, ASI_MFM_Month_2_Cost__c)  + 
		IF( ISBLANK(ASI_MFM_Month_3_Cost__c) ,0, ASI_MFM_Month_3_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_4_Cost__c) ,0, ASI_MFM_Month_4_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_5_Cost__c) ,0, ASI_MFM_Month_5_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_6_Cost__c) ,0, ASI_MFM_Month_6_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_7_Cost__c) ,0, ASI_MFM_Month_7_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_8_Cost__c) ,0, ASI_MFM_Month_8_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_9_Cost__c) ,0, ASI_MFM_Month_9_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_10_Cost__c) ,0, ASI_MFM_Month_10_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_11_Cost__c) ,0, ASI_MFM_Month_11_Cost__c) + 
		IF( ISBLANK(ASI_MFM_Month_12_Cost__c) ,0, ASI_MFM_Month_12_Cost__c) 
)
&amp;&amp;
(RecordType.DeveloperName = &quot;ASI_MFM_CN_Plan_Line_Item&quot; || RecordType.DeveloperName = &quot;ASI_MFM_GF_Plan_Line_Item&quot;)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Total_Cost__c</errorDisplayField>
        <errorMessage>Please make sure the sum of spread amount equal to Plan Line Amount</errorMessage>
    </validationRules>
</CustomObject>